[tool.poetry]
name = "pj"
version = "0.1.0"
description = "Utility for interfacing with Git projects"
authors = ["Michael Renken <michaelarenken@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
